# gaokao-vault

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  claude.md  docker-compose.yml  mkdocs.yml  pyproject.toml  vision_sdk_research.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/actions/setup-python-env/: action.yml
.github/workflows/: deploy.yml
docs/: architecture.md  cli.md  getting-started.md  index.md  modules.md  strong-foundation.md
docs/superpowers/specs/: 2026-04-20-school-province-major-design.md  2026-04-23-major-admission-results-design.md
nginx/: minio-proxy.conf
skills/scrapling-official/: SKILL.md  _meta.json
skills/scrapling-official/references/: mcp-server.md  migrating_from_beautifulsoup.md
src/gaokao_vault/: cli.py  config.py  constants.py  health.py
src/gaokao_vault/anti_detect/: __init__.py  proxy_pool.py  rate_limiter.py  ua_pool.py
src/gaokao_vault/db/: __init__.py  connection.py  migrate.py  schema.sql  seed_provinces.sql  seed_subject_categories.sql
src/gaokao_vault/models/: __init__.py  admission.py  enrollment.py  major.py  recommendation.py  school.py  score.py  special.py
src/gaokao_vault/pipeline/: __init__.py  admission_rules.py  batch_normalizer.py  dedup.py  hasher.py  quality.py  sink.py  validator.py
tests/: conftest.py  test_admission_queries.py  test_admission_rules.py  test_agent_source_views.py  test_batch_normalizer.py  test_bug_condition_exploration.py  test_cli_data_quality.py  test_cli_healthcheck.py  test_cli_schedule.py  test_config.py  test_crawl_meta_queries.py  test_crawl_scope.py  test_cron_runner.py  test_data_quality_queries.py  test_docs_strong_foundation.py  test_dxsbb_admission_result_spider.py  test_enrollment_plan_spider.py  test_enrollment_queries.py  test_foo.py  test_health.py  test_http412_bug_condition.py  test_http412_preservation.py  test_major_admission_result_spider.py  test_major_queries.py  test_major_satisfaction_spider.py  test_major_strength_signal_spider.py  test_orchestrator_timeout.py  test_pipeline.py  test_preservation_properties.py  test_recommendation_queries.py  test_response_utils.py  test_schema_migrations.py  test_school_major_spider.py  test_school_queries.py  test_school_satisfaction_spider.py  test_school_spider_discovery.py  test_score_queries.py  test_score_segment_spider.py  test_special_queries.py  test_special_spider.py  (+2 more)
(+52 files in other folders)
